[package]
name = "horrible_database"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
serde_json = "1.0.136"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
strum = "0.27.0"
strum_macros = "0.27.0"
typetag = "0.2.20"
log = "0.4.27"
env_logger = "0.11.8"
